# Rekt

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  PLAN.md  README.md  TEST_PROMPT.md  rust-toolchain.toml
.github/workflows/: ci.yml
crates/rekt-analyst/: Cargo.toml
crates/rekt-analyst/src/: lib.rs  pricing.rs  runner.rs
crates/rekt-broker/: Cargo.toml
crates/rekt-broker/src/: alpaca.rs  lib.rs  stream.rs
crates/rekt-core/: Cargo.toml
crates/rekt-core/src/: alerts.rs  history.rs  lib.rs  market.rs  orders.rs  outcomes.rs  portfolio.rs  screener.rs  signals.rs  splits.rs  taxes.rs
crates/rekt-data/: Cargo.toml
crates/rekt-data/src/: alpaca_data.rs  finnhub.rs  lib.rs  stream.rs
crates/rekt-server/: Cargo.toml
crates/rekt-server/assets/: demo_seed.sql  index.html
crates/rekt-server/src/: alerts.rs  analyst.rs  api.rs  demo.rs  history.rs  import.rs  live.rs  main.rs  market.rs  portfolios.rs  repo.rs  screener.rs  splits.rs  taxes.rs  trading.rs
docs/: OPERATIONS.md  RESEARCH.md
migrations/: 0001_init.sql  0002_orders.sql  0003_mode_and_settings.sql  0004_alerts.sql  0005_analyst.sql  0006_named_watchlists.sql  0007_market_ideas_kind.sql  0008_market_brief_kind.sql  0009_analyses_kind_status_index.sql
scripts/: gen_demo_seed.sh
