[package]
name = "rekt-core"
description = "REKT domain types and pure portfolio logic (I/O-free)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
chrono = { workspace = true }
rust_decimal = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
